tests/ui/macros/meta-item-absolute-path.rs
#[derive(::Absolute)] //~ ERROR cannot find macro `Absolute`
                      //~| ERROR cannot find macro `Absolute`
struct S;

fn main() {}
